public/css/native.css
/* ... */
#manageJobPage #modal-create-job .modal__content {
    overflow: hidden auto;
}
#manageJobPage #modal-delete-job .modal__header {
    border-bottom: 1px solid #f4f4f4;
    padding-bottom: 20px;
}

#seeSubscriptionPage header {
    background-color: var(--almost-white);
    border-bottom: 1px solid #dcdcdc;
}
#seeSubscriptionPage .subscription-single__caption {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}
#seeSubscriptionPage .subscription__desc p, #seeSubscriptionPage .subscription__desc h1,
#seeSubscriptionPage .subscription__desc ul, #seeSubscriptionPage .subscription__desc ol,
#modal-subscription-detail p, #modal-subscription-detail ul, #modal-subscription-detail h1, #modal-subscription-detail ol {
    margin-bottom: 30px;
}
#seeSubscriptionPage .subscription__action {
    display: flex;
    padding: 2rem 0;
    margin-top: 3rem;
    border-top: 1px solid #dedede;
}
#seeSubscriptionPage .subscription__action form {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
}
#seeSubscriptionPage .subscription__action input {
    width: 40px;
    height: 40px;
    display: flex;
    margin-left: 30px;
    border: 1px solid #e2e2e2;
    align-items: center;
    transition: all 150ms;
    justify-content: center;
    text-align: center;
    color: #525252;
}
#seeSubscriptionPage .subscription__action input:hover, #seeSubscriptionPage .subscription__action input:focus {
    padding-left: 0;
}
#seeSubscriptionPage .subscription__btn {
    width: 100%;
    max-width: 450px;
    margin: 25px auto 0;
    background-color: var(--primary-color) !important;
    color: #fff;
    transition: all 200ms;
    box-shadow: 3px 2px 4px 2px rgba(0, 0, 0, 0.14);
}
#seeSubscriptionPage .subscription__btn:hover {
    background-color: var(--primary-color-hover);
}
#seeSubscriptionPage .subscription__btn:active {
    background-color: #119a5b;
    transform: translateY(2px);
    box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.2);
}

#userChatPage main .container {
    max-width: none;
}
#userChatPage .order-chat {
    padding: 2rem 0;
    width: 100%;
}
#userChatPage .order-detail {
    padding: 0 1rem 1rem;
    border-bottom: 1px solid #dbdbdb;
    background-color: #fff;
    display: flex;
    top: 0;
    flex-direction: column;
    align-items: center;
    left: 0;
    width: 100%;
    /*z-index: 1;*/
    transition: box-shadow 200ms;
}
#userChatPage .order-detail__info {
    display: flex;
    width: 100%;
    flex-direction: column;
    justify-content: center;
}
#userChatPage .order-detail__back-btn {
    margin: 1.5rem 0 0.5rem;
    background-color: var(--third-color) !important;
    color: #fff;
}
#userChatPage .order-detail__back-btn:hover {
    background-color: #2e84bb !important;
    color: #fff;
}
#userChatPage .order-detail__back-btn:active {
    background-color: #2675a7 !important;
}
#userChatPage .order-detail.scrolled {
    padding-top: 1rem;
    /*position: sticky;*/
    box-shadow: 0 2px 6px 3px rgba(74, 74, 74, 0.2);
}
#userChatPage .order-detail__img {
    transition: all 150ms;
    height: 200px;
}
#userChatPage .order-detail__img--hide {
    visibility: hidden;
    opacity: 0;
    height: 0;
    width: 0;
    overflow: hidden;
}
#userChatPage .order-chat__avatar {
    border-radius: 50%;
    height: 80px;
    width: 80px;
}
#userChatPage .order-chat__myself, #userChatPage .order-chat__agent {
    display: flex;
    align-items: center;
    margin-bottom: 2rem;
}
#userChatPage .order-chat__agent {
    justify-content: flex-start;
}
#userChatPage .order-chat__myself {
    flex-direction: row-reverse;
}
#userChatPage .order-chat__box {
    color: var(--text-color);
    padding: 10px 1rem;
    background-color: var(--almost-white);
    border-radius: 1rem;
}
#userChatPage .order-chat__agent .order-chat__box {
    border-top-left-radius: 0;
    margin-left: 1rem;
}
#userChatPage .order-chat__myself .order-chat__box {
    border-top-right-radius: 0;
    margin-right: 1rem;
}
#userChatPage .order-chat__read {
    color: var(--primary-color);
}
#userChatPage .order-chat__delivery, #userChatPage .order-chat__read {
    margin-top: 10px;
    display: block;
}
#userChatPage .order-chat__delivery {
    color: #9e9e9e;
}
#userChatPage .order-chat__send-box {
    display: flex;
    position: fixed;
    bottom: 0;
    width: 100%;
    left: 0;
    padding: 1rem 0.6rem;
    background-color: var(--almost-white);
    border-top: 1px solid #cecece;
    justify-content: space-between;
}
#userChatPage .order-chat__send-box input[name='message'] {
    flex-grow: 1;
    width: auto;
    text-indent: 45px;
}
#userChatPage .order-chat__send-box .attachment {
    width: auto;
    position: absolute;
}
#userChatPage .attachment__input {
    visibility: hidden;
    opacity: 0;
    position: absolute;
    left: 0;
    top: 0;
    height: 0;
    width: 0;
}
#userChatPage .attachment__label {
    cursor: pointer;
    background-color: var(--primary-color);
    width: auto;
    padding: 0 1rem;
    border: 1px solid #b8b8b8;
    height: 38px;
    display: flex;
    color: #fff;
    /*font-weight: bold;*/
    font-size: 1.2rem;
    align-items: center;
    justify-content: center;
    border-radius: 5px 0 0 5px;
}
#userChatPage .attachment__label:hover {
    background-color: var(--primary-color-hover);
}
#userChatPage .order-chat__send-btn {
    margin-left: 1rem;
    border-radius: 1.5rem !important;
    padding: 0 1.5rem !important;
    background-color: var(--secondary-color) !important;
    color: #fff;
}

footer {
    word-break: break-word;
    border-top: 1px solid #c2c2c2;
    padding: 30px 0;
    background-color: var(--almost-white);
}
.footer__logo {
    display: block;
    text-align: center;
}
.footer__logo img {
    max-width: 100%;
    filter: brightness(0.96);
}
footer .row {

}
.footer__info {
    display: flex;
    align-items: center;
    flex-direction: column;
}
/* ... */

